# candle-gpt

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-05-03-v2-data-pipeline.md  2026-05-03-v2-features-funding-liq-regime.md  2026-05-04-v2-dashboard.md  2026-05-04-v2-features-vector.md  2026-05-04-v2-model.md  2026-05-04-v2-training.md
docs/refs/: tokenized-candle-predictor-target-ui.jsx
docs/research/: 2026-05-05-clean-signal-noise.md  2026-05-07-lowering-loss-asymptote.md  2026-05-07-synthetic-curriculum.md
v2/: current_run_id.txt
v2/data/: constants.py  dataset.py  fetch.py  funding.py  regime.py  store.py  synthetic.py  tag_regimes.py  validate.py
v2/features/: constants.py  engineer.py
v2/model/: attention.py  config.py  model.py  tokenizer.py  transformer.py
v2/notebooks/: 01_data_explore.ipynb
v2/server/: eval_cache.py  inference.py  main.py  sweep.py  system_stats.py  training_view.py
v2/tests/: test_aux_training_heads.py  test_constants.py  test_dataloader_join.py  test_dataset.py  test_features_constants.py  test_features_engineer.py  test_fetch.py  test_funding.py  test_inference_reload.py  test_liquidations_collect.py  test_liquidations_rollup.py  test_liquidations_tardis_stub.py  test_model_config.py  test_model_forward.py  test_model_tokenizer.py  test_progress_emitter.py  test_regime.py  test_schema_versioning.py  test_store.py  test_synthetic_data.py  test_tag_regimes.py  test_train_leakage_guards.py  test_train_losses.py  test_train_smoke.py  test_training_endpoints.py  test_validate.py
v2/train/: config.py  eval.py  loop.py  (+4 more)
(+26 files in other folders)
