[project]
name = "candle-gpt"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "python-multipart>=0.0.27",
    "requests>=2.33.1",
    "torch>=2.11.0",
    "uvicorn[standard]>=0.46.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupytext>=1.19.1",
    "matplotlib>=3.10.9",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "responses>=0.26.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["v2/tests"]
